--- a/css/framework7.material.colors.css
+++ b/css/framework7.material.colors.css
@@ -1,4 +1,4 @@
-1e5799* Framework7 1.4.2
+ * Framework7 1.4.2
  * Full Featured Mobile HTML Framework For Building iOS & Android Apps
  * 
  * Google Material Theme
