--- a/css/framework7.material.css
+++ b/css/framework7.material.css
@@ -4780,23 +4780,26 @@ html.with-statusbar-overlay .popup.tablet-fullscreen {
 }
 body.with-panel-left-cover .panel,
 body.with-panel-right-cover .panel {
-  box-shadow: none;
+  box-shadow: none !important;
   overflow: visible;
   /*box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);*/
 }
 body.with-panel-left-cover .views,
 body.with-panel-right-cover .views {
+  box-shadow: none !important;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 body.with-panel-left-cover .panel-overlay,
 body.with-panel-right-cover .panel-overlay {
+  box-shadow: none !important;
   display: block;
   opacity: 1;
 }
 body.with-panel-left-reveal .views,
 body.with-panel-right-reveal .views {
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  /*box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);*/
+  box-shadow: none !important;
   -webkit-transition-duration: 300ms;
   transition-duration: 300ms;
   -webkit-transition-property: -webkit-transform, box-shadow;
@@ -4805,31 +4808,38 @@ body.with-panel-right-reveal .views {
 }
 body.with-panel-left-reveal .panel-overlay,
 body.with-panel-right-reveal .panel-overlay {
+  box-shadow: none !important;
   background: rgba(0, 0, 0, 0);
   display: block;
   opacity: 0;
 }
 body.with-panel-left-reveal .views {
+  box-shadow: none !important;
   -webkit-transform: translate3d(260px, 0, 0);
   transform: translate3d(260px, 0, 0);
 }
 body.with-panel-left-reveal .panel-overlay {
+  box-shadow: none !important;
   -webkit-transform: translate3d(260px, 0, 0);
   transform: translate3d(260px, 0, 0);
 }
 body.with-panel-left-cover .panel-left {
+  box-shadow: none !important;
   -webkit-transform: translate3d(260px, 0, 0);
   transform: translate3d(260px, 0, 0);
 }
 body.with-panel-right-reveal .views {
+  box-shadow: none !important;
   -webkit-transform: translate3d(-260px, 0, 0);
   transform: translate3d(-260px, 0, 0);
 }
 body.with-panel-right-reveal .panel-overlay {
+  box-shadow: none !important;
   -webkit-transform: translate3d(-260px, 0, 0);
   transform: translate3d(-260px, 0, 0);
 }
 body.with-panel-right-cover .panel-right {
+  box-shadow: none !important;
   -webkit-transform: translate3d(-260px, 0, 0);
   transform: translate3d(-260px, 0, 0);
 }
